fix: Content clipping in Adoc’s admonitionblock
Ah, table layout gripes…

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -26,6 +26,9 @@ body > main {
       padding-right: 1em;
       font-weight: bold;
     }
+    .content {
+      word-break: break-word;
+    }
   }
 }
 
